examples/test/testpolicy16690.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16690
  namespace: namespace241
spec:
  podSelector:
    matchLabels:
      key15: value44
      key28: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value23
      podSelector:
        matchLabels:
          key37: value10
          key31: value29
